--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ol>
-        <li><a href="IMSQUIZ_Release1.41.html"> 1.41ver</a></li>
+        <li><a href="IMSQUIZ_Release1_41.html"> 1.41ver</a></li>
     </ol>
 </body>
 </html>
