--- a/IMSQUIZ_Release1.41.html
+++ b/IMSQUIZ_Release1.41.html
@@ -5452,7 +5452,8 @@
                     document.getElementById("card-body").style.backgroundColor = "#333333";
                     document.getElementById("image1").src = "http://drive.google.com/uc?export=view&id=1m9BSsh_Is5FKxXdowyFHwh-l_dRjpaU8";
                     alert('<vivid_rabbit>로 접속합니다.');
-                    return 0;
+                        document.getElementById('input').value = "";
+                        return 0;
                 } else if(inputText == "7272"){
                     document.getElementById("mainTitle1").style.backgroundColor = "#2743D2";
                     document.getElementById("mainTitle2").style.backgroundColor = "#2743D2";
@@ -5466,6 +5467,7 @@
                     document.getElementById("card-body").style.backgroundColor = "#D3D0F7";
                     document.getElementById("image1").src = "http://drive.google.com/uc?export=view&id=1U0HfH1BiT9UOnYLHlNz8875D8e9J8VD-";
                     alert('?? : 작은 건 나쁜 것이 아닌, 미래 지향적이고 실용적인 것이다');
+                    document.getElementById('input').value = "";
                     return 0;
                 } else if(inputText == "/reset"){
                     document.getElementById("mainTitle1").style.backgroundColor = "#16033d";
@@ -5479,6 +5481,7 @@
                     document.body.style.backgroundColor = "white";
                     document.getElementById("card-body").style.backgroundColor = "white";
                     document.getElementById("image1").src = "http://drive.google.com/uc?export=view&id=1YJPk_gbfoiT_95Rv9km-uhK03nqHsPGr"; 
+                    document.getElementById('input').value = "";
                     return 0;
                 } else if(inputText == "//"){
                     if(hints == ""){
