--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
 <html>
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <title> ZACGOON_WEB ROOM </title>
     <meta charset="utf-8">
 </head>
 <body>
     <ol>
+        <div id="masTitle">M@S QUIZ UPDATES</div>
         <li><a href="IMSQUIZ_Release1.41.html"> 1.41ver</a></li>
-        <li></li>
+        <li><a></a></li>
     </ol>
 </body>
+<style>
+@import url(//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css);
+* {
+    font-family: "Spoqa Han Sans Neo", "sans-serif" !important;
+}
+#masTitle {
+    font-size: large;
+    font-weight: bold;
+    text-align: left;
+    margin:auto;
+}
+</style>
 </html>
