--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <ol>
-        <div id="masTitle">M@S QUIZ UPDATES</div>
+        <p id="masTitle">M@S QUIZ UPDATES</p>
         <li><a href="IMSQUIZ_Release1.41.html"> 1.41ver</a></li>
         <li><a></a></li>
     </ol>
