--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <ol>
         <p id="masTitle">M@S QUIZ UPDATES</p>
-        <li><a href="IMSQUIZ_Release1.41.html"> 1.41ver</a></li>
+        <li><a href="IMSQUIZ_Release1.4.html"> IMSQUIZ_1.4</a></li>
         <li><a></a></li>
+    </ol>
+    <ol>
+        <p id="others">Others</p>
     </ol>
 </body>
 <style>
@@ -20,6 +23,12 @@
     font-family: "Spoqa Han Sans Neo", "sans-serif" !important;
 }
 #masTitle {
+    font-size: large;
+    font-weight: bold;
+    text-align: left;
+    margin:auto;
+}
+#others {
     font-size: large;
     font-weight: bold;
     text-align: left;
