--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <ol>
         <p id="masTitle">M@S QUIZ UPDATES</p>
+        <li><a href="IMSQUIZ_Release1.5.html"> IMSQUIZ_1.4</a></li>
         <li><a href="IMSQUIZ_Release1.4.html"> IMSQUIZ_1.4</a></li>
         <li><a></a></li>
     </ol>
