--- a/index.html
+++ b/index.html
@@ -4,18 +4,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+        crossorigin="anonymous"
+    />
     <title> ZACGOON_WEB ROOM </title>
     <meta charset="utf-8">
 </head>
 <body>
+    <div class="TitleBack">
+    <p id="mainTitle1"> <i class="bi bi-box-seam"></i> ZACGOON WEB ROOM </p>
+    </div>
     <ol>
-        <p id="masTitle">M@S QUIZ UPDATES</p>
-        <li><a href="IMSQUIZ_Release1.5.html"> IMSQUIZ_1.5</a></li>
-        <li><a href="IMSQUIZ_Release1.4.html"> IMSQUIZ_1.4</a></li>
-        <li><a></a></li>
+        <p id="masTitle"> <i class="bi bi-music-note-list" style="color: #c03636"></i> M@S QUIZ UPDATES</p>
+        <li><a href="IMSQUIZ_Release1.5.html" id="list"> IMSQUIZ_1.5</a></li>
+        <li><a href="IMSQUIZ_Release1.4.html" id="list"> IMSQUIZ_1.4</a></li>
+        <li><a id="list"> COMING UPDATES</a></li>
     </ol>
     <ol>
-        <p id="others">Others</p>
+        <p id="others"><i class="bi bi-collection-play-fill" style="color: #c03636;"></i> Others</p>
+        <li><a href="a" id="list"> <i class="bi bi-youtube"></i> Youtube Channel</a></li>
+        <li><a href="b" id="list"> <i class="bi bi-google"></i> Google Drive</a></li>
     </ol>
 </body>
 <style>
@@ -23,17 +34,30 @@
 * {
     font-family: "Spoqa Han Sans Neo", "sans-serif" !important;
 }
+#mainTitle1{
+    font-size:x-large;
+    font-weight: bold;
+    text-align: left;
+    margin-left: 50px;
+    color: white;
+}
+.TitleBack{
+    background-color: #16033d;
+}
 #masTitle {
     font-size: large;
     font-weight: bold;
     text-align: left;
-    margin:auto;
+    margin: auto;
 }
 #others {
     font-size: large;
     font-weight: bold;
     text-align: left;
     margin:auto;
+}
+#list{
+    font-weight: bold;
 }
 </style>
 </html>
