--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
     <ol>
         <p id="masTitle"> <i class="bi bi-music-note-list" style="color: #c03636"></i> M@S QUIZ UPDATES</p>
+        <li><a href="IMSQUIZ_Release1.6.html" id="list"> IMSQUIZ_1.6</a></li>
         <li><a href="IMSQUIZ_Release1.5.html" id="list"> IMSQUIZ_1.5</a></li>
         <li><a href="IMSQUIZ_Release1.4.html" id="list"> IMSQUIZ_1.4</a></li>
         <li><a id="list"> COMING UPDATES</a></li>
