--- a/IMSQUIZ_Release1.6.html
+++ b/IMSQUIZ_Release1.6.html
@@ -5848,6 +5848,24 @@
                     alert('합법(?) 섹시레이디 소환');
                     document.getElementById('input').value = "";
                     return 0;
+                } else if(inputText == "ryamu"){
+                    메인1.style.backgroundColor = "#E79BDC";
+                    메인2.style.backgroundColor = "#E79BDC";
+                    해설.style.backgroundColor = "#6cedee";
+                    본가테그.style.color = "black";
+                    밀리테그.style.color = "black";
+                    데레테그.style.color = "black";
+                    샤니테그.style.color = "black";
+                    기타테그.style.color = "black";
+                    팁창.style.background = "";
+                    팁창.style.color = "#ff4f4f59";
+                    바탕화면.style.backgroundColor = "#f1ffff";
+                    카드바탕.style.backgroundColor = "#f1ffff";
+                    뮤직박스.style.background = "#fae3ed";
+                    이미지.src = "http://drive.google.com/uc?export=view&id=1avH9NZiHmd8nSR5yzNtHUDC5275KYaAc";
+                    alert('?? : 오타쿠 개꿀이네 ㅋㅋ');
+                    document.getElementById('input').value = "";
+                    return 0;
                 }
                 else if(inputText == "//"){
                     if(hints == ""){
@@ -11013,6 +11031,11 @@
                 margin-top: -15px;
                 margin-bottom: 8px;
             }
+            #thema_mas{
+                font-size: small;
+                margin-top: -4px;
+                margin-bottom: -7px;
+            }
             .version { /* 제작자 표시 */
                 margin-top: -5px;
                 text-align: right;
@@ -11209,6 +11232,7 @@
                     <p class="An"> A : 죄송합니다..말해주시면 수정하겠습니다.</p>
                     <p class="Qu"> Q : 기타 테그에 포함된 노래는 무엇인가요?</p>
                     <p class="An"> A : 여러 시리즈가 합한, 혹은 공식게임의 노래들입니다.</p>
+                    <p id="thema_mas"> 시크릿 테마 : vivid_rabbit|7272|nano|143cm|ryamu </p>
                     <p class="email">개인이메일 : leegy1110@naver.com</p>
                 </div>
             </div>
