--- a/IMSQUIZ_Release1.6.html
+++ b/IMSQUIZ_Release1.6.html
@@ -76,7 +76,7 @@
 
     <body>
         <h2 id="mainTitle1">M@S SONG QUIZ made by Zacgoon</h2>
-        <img src='http://drive.google.com/uc?export=view&id=1YJPk_gbfoiT_95Rv9km-uhK03nqHsPGr' width="60" id="image1">
+        <img src='http://drive.google.com/uc?export=view&id=1YJPk_gbfoiT_95Rv9km-uhK03nqHsPGr' width="60" style="margin-top: -2px; margin-left: 2px;" id="image1">
         <p id="mainTitle2" class="hankuku" >
             한국어도 됩니다! 영어는 되도록이면 소문자, 띄어쓰기 해주세요.
         </p>
