--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ol>
         <p id="others"><i class="bi bi-collection-play-fill" style="color: #c03636;"></i> Others</p>
         <li><a href="a" id="list"> <i class="bi bi-youtube"></i> Youtube Channel</a></li>
-        <li><a href="b" id="list"> <i class="bi bi-google"></i> Google Drive</a></li>
+        <li><a href="https://drive.google.com/drive/folders/1Hqd6fOywnGwT7xGKAcMu-kwk6d8shBGV?usp=sharing" id="list"> <i class="bi bi-google"></i> Google Drive</a></li>
     </ol>
 </body>
 <style>
