--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <li><a id="list"> COMING UPDATES</a></li>
     </ol>
     <ol>
+        <p id="masTitle"> <i class="bi bi-music-note-list" style="color: #c03636"></i> M@S QUIZ CHOOSE BETA!!!</p>
+        <li><a href="IM@SCHOOSE_BETA1.html" id="list"> IMSCHOOSE BETA1</a></li>
+        <li><a id="list"> COMING UPDATES</a></li>
+    </ol>
+    <ol>
         <p id="others"><i class="bi bi-collection-play-fill" style="color: #c03636;"></i> Others</p>
         <li><a href="https://www.youtube.com/channel/UCdpsEqPeAXVGlgN_79yp5Ng/playlists" id="list"> <i class="bi bi-youtube"></i> Youtube Channel</a></li>
         <li><a href="https://drive.google.com/drive/folders/1Hqd6fOywnGwT7xGKAcMu-kwk6d8shBGV?usp=sharing" id="list"> <i class="bi bi-google"></i> Google Drive</a></li>
