--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </ol>
     <ol>
         <p id="masTitle"> <i class="bi bi-music-note-list" style="color: #c03636"></i> M@S QUIZ CHOOSE BETA!!!</p>
+        <li><a href="IM@SCHOOSE_BETA2.html" id="list"> IMSCHOOSE BETA2</a></li>
         <li><a href="IM@SCHOOSE_BETA1.html" id="list"> IMSCHOOSE BETA1</a></li>
         <li><a id="list"> COMING UPDATES</a></li>
     </ol>
