--- a/IMSQUIZ_Release1.7.html
+++ b/IMSQUIZ_Release1.7.html
@@ -273,6 +273,7 @@
                         - MILLION THE@TER SEASON SHADE OF SPADE 앨범 추가<br>
                         - SHINY COLORS PANOR@MA WING 07 앨범 추가<br>
                         - CINDERELLA MASTER Cute jewelries! 004 앨범 추가<br>
+                        - CINDERELLA GIRLS STARLIGHT MASTER R/LOCK ON! 09 앨범 추가<br>
                         - 몇몇 곡의 힌트 철자 실수 수정<br>
                     </p>
                 </div>
