--- a/IMSQUIZ_Release1.7.html
+++ b/IMSQUIZ_Release1.7.html
@@ -266,15 +266,14 @@
             <div class="card-header" data-bs-toggle="collapse" href="#collapseExample" role="button" style="color: #3075ff;"><i class="bi bi-award"></i> 업데이트 내용! <i class="bi bi-arrow-down-short"></i></div>
             <div class="collapse" id="collapseExample">
                 <div class="card-body text-secondary">
-                    <h5 class="card-title">2022/10/29</h5>
+                    <h5 class="card-title">2022/11/27</h5>
                     <p class="card-text" id="update_message">
-                        - 업데이트 내용 메뉴 추가<br>
+                        - SHINY COLORS PANOR@MA WING 08 앨범 추가<br>
                         - 노래 받기 키 TAB으로 변경<br>
                         - MILLION THE@TER SEASON SHADE OF SPADE 앨범 추가<br>
                         - SHINY COLORS PANOR@MA WING 07 앨범 추가<br>
                         - CINDERELLA MASTER Cute jewelries! 004 앨범 추가<br>
                         - CINDERELLA GIRLS STARLIGHT MASTER R/LOCK ON! 09 앨범 추가<br>
-                        - 몇몇 곡의 힌트 철자 실수 수정<br>
                     </p>
                 </div>
             </div>
