--- a/IMSQUIZ_Release1.7.html
+++ b/IMSQUIZ_Release1.7.html
@@ -266,14 +266,14 @@
             <div class="card-header" data-bs-toggle="collapse" href="#collapseExample" role="button" style="color: #3075ff;"><i class="bi bi-award"></i> 업데이트 내용! <i class="bi bi-arrow-down-short"></i></div>
             <div class="collapse" id="collapseExample">
                 <div class="card-body text-secondary">
-                    <h5 class="card-title">2022/12/02</h5>
+                    <h5 class="card-title">2023/01/18</h5>
                     <p class="card-text" id="update_message">
-                        - MILLION LIVE! M@STER SPARKLE2 10 앨범 추가<br>
-                        - SHINY COLORS PANOR@MA WING 08 앨범 추가<br>
-                        - 노래 받기 키 TAB으로 변경<br>
-                        - MILLION THE@TER SEASON SHADE OF SPADE 앨범 추가<br>
-                        - SHINY COLORS PANOR@MA WING 07 앨범 추가<br>
-                        - CINDERELLA MASTER Cute jewelries! 004 앨범 추가<br>
+                        - 최신 업데이트 곡 재생 버튼 추가<br>
+                        - CINDERELLA GIRLS [서머 사이다, 댄싱 데드...] 추가<br>
+                        - 링크 최적화 및 태그 간편화<br>
+                        - CINDERELLA GIRLS PLATINUM NUMBER 02 앨범 추가<br>
+                        - CINDERELLA GIRLS PLATINUM NUMBER 01 앨범 추가<br>
+                        - SHINY COLORS B☆Health 앨범 추가<br>
                     </p>
                 </div>
             </div>
@@ -300,6 +300,7 @@
 		            <input type="checkbox" class="form-check-input" id="데레" value="데레" checked="checked" title="체크시 데레 곡 포함"><span id="tag3">데레</span>
 		            <input type="checkbox" class="form-check-input" id="샤니" value="샤니" checked="checked" title="체크시 샤니 곡 포함"><span id="tag4">샤니</span>
                     <input type="checkbox" class="form-check-input" id="기타" value="기타" checked="checked" title="체크시 기타 곡 포함"><span id="tag5">기타</span>
+                    <button class="btn btn-primary" title="최근 업데이트 곡을 재생합니다" onclick="UpdatedSongChange()"> 업뎃 </button>
                 </h3>
                 <br/>
                 <button style="visibility: hidden;">빈공간</button>
