--- a/IMSQUIZ_Release1.7.html
+++ b/IMSQUIZ_Release1.7.html
@@ -266,14 +266,14 @@
             <div class="card-header" data-bs-toggle="collapse" href="#collapseExample" role="button" style="color: #3075ff;"><i class="bi bi-award"></i> 업데이트 내용! <i class="bi bi-arrow-down-short"></i></div>
             <div class="collapse" id="collapseExample">
                 <div class="card-body text-secondary">
-                    <h5 class="card-title">2023/01/18</h5>
+                    <h5 class="card-title">2023/06/18</h5>
                     <p class="card-text" id="update_message">
-                        - 최신 업데이트 곡 재생 버튼 추가<br>
-                        - CINDERELLA GIRLS [서머 사이다, 댄싱 데드...] 추가<br>
-                        - 링크 최적화 및 태그 간편화<br>
-                        - CINDERELLA GIRLS PLATINUM NUMBER 02 앨범 추가<br>
-                        - CINDERELLA GIRLS PLATINUM NUMBER 01 앨범 추가<br>
-                        - SHINY COLORS B☆Health 앨범 추가<br>
+                        - SHINY COLORS “CANVAS” 01 02 03 앨범 추가<br>
+                        - MILLION THE@TER SEASON FINAL 앨범 추가<br>
+                        - THE IDOLM@STER MILLION THE@TER VARIETY 03 앨범 추가<br>
+                        - CINDERELLA GIRLS U149 ANIMATION MASTER 곡 추가<br>
+                        - CINDERELLA MASTER Cool jewelries! 004 앨범 추가<br>
+                        - 업뎃 버튼 클릭 시 포기 개수 비정상적 증가 수정완료<br>
                     </p>
                 </div>
             </div>
